Add some experiments with eps

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -5,7 +5,7 @@
    "id": "5a010e5e-d572-4698-97c7-0c2dacb8bd86",
    "metadata": {},
    "source": [
-    "Scratch work and preliminary performance notes for `swe-python` with TT/QTT."
+    "# Scratch work and preliminary performance notes for `swe-python` with TT/QTT."
    ]
   },
   {
@@ -45,6 +45,8 @@
    "id": "64a5fdab-b9ae-4d07-992e-d65935244f95",
    "metadata": {},
    "source": [
+    "## Set up\n",
+    "\n",
     "Here, we make a \"fake\" `cnfg` object with defaults since we don't have access to `argparse` from the notebook."
    ]
   },
@@ -179,6 +181,8 @@
    "id": "3f6f2a7b-7de4-4ee2-a616-de323584e04c",
    "metadata": {},
    "source": [
+    "# TT vs. CSR (defaults)\n",
+    "\n",
     "Some preliminary performance tests.\n",
     "The CSRmatrix-vector multiply is very fast -- let's compare to TT multiply.\n",
     "\n",
@@ -283,7 +287,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 30 compression 0.0009765625\n",
       "\n",
-      "time to tt.TT(uu_edge) = 0.0015568733215332031\n",
+      "time to tt.TT(uu_edge) = 0.0018532276153564453\n",
       "\n",
       "tt_edge_flux_perp = TT-matrix with sizes and ranks:\n",
       "M = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
@@ -292,7 +296,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 29475394 compression 0.031233251359727647\n",
       "\n",
-      "time to tt.TT(dense_edge_flux_perp) = 137.49320816993713\n"
+      "time to tt.TT(dense_edge_flux_perp) = 139.2604329586029\n"
      ]
     }
    ],
@@ -386,7 +390,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 14729072 compression 479.46197916666665\n",
       "\n",
-      "time to @ = 0.017527103424072266\n",
+      "time to @ = 0.01729297637939453\n",
       "\n",
       "tt_mult_result (after round) = TT with sizes and ranks:\n",
       "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
@@ -395,9 +399,9 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 71714 compression 2.3344401041666667\n",
       "\n",
-      "time to round = 0.12090015411376953\n",
+      "time to round = 0.1298661231994629\n",
       "\n",
-      "total time = 0.2768545150756836\n"
+      "total time = 0.29431819915771484\n"
      ]
     }
    ],
@@ -428,7 +432,8 @@
    "id": "cf5f3dd4-89c2-4b95-8d54-95813ca4ce6b",
    "metadata": {},
    "source": [
-    "This seems pretty slow, let's look at the CSR multiply and the ratio of the two times."
+    "This seems pretty slow, let's look at the CSR multiply and the ratio of the two times.\n",
+    "Also, look at the compression for `tt_mult_result` -- extremely bad even after rounding."
    ]
   },
   {
@@ -441,8 +446,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "csr mult time = 0.0005898475646972656\n",
-      "tt mult time / csr mult time = 352.0246564268391\n"
+      "csr mult time = 0.0008661746978759766\n",
+      "tt mult time / csr mult time = 254.84310487200662\n"
      ]
     }
    ],
@@ -482,7 +487,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "full mult time = 0.4231600761413574\n"
+      "full mult time = 0.4646952152252197\n"
      ]
     }
    ],
@@ -531,12 +536,238 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56775e32-0d5c-4e0a-8397-3497d133d944",
+   "cell_type": "markdown",
+   "id": "b0a2323f-6711-4984-8784-44d47a3d9051",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Notes\n",
+    "\n",
+    "With the above results, we need to do more if we expect to get good performance out of a potential TT method. Some thoughts:\n",
+    "- Right now, the worst part seems to be the TT operator compression (and how long they take to calculate!). The CSR matrix form is both numerically exact and has a significantly smaller memory footprint.\n",
+    "    - The default value of `eps` for `torchtt` is `eps=1e-10`. How much bigger does `eps` need to be in order to beat CSR on compression?\n",
+    "    - Do we even want/need to represent the operators as TTs? Is it possible to do something like `CSR_tensor @ tt_vector`? This way, we would keep the great compression from CSR and still have an exact operator. Might want to look into `torch.sparse`. Is a sparse TT a thing? If not, why not?\n",
+    "- We are not doing QTTs in all the above. A QTT has a shape of `[mode_size, mode_size, ..., mode_size]` and a total size of a power of `mode_size` (normally `mode_size = 2`).\n",
+    "    - We can try padding both the operator and vectors with zeros so that their total size is a multiple of 2, then getting QTTs from there. I don't see this being 200x faster, but worth knowing for sure.\n",
+    "    - This strategy would probably have dimishing returns as the mesh size(s) strays further from a power of 2.\n",
+    "- We can also think about running these TT operations on a GPU -- something we can't do with CSR (at least right off the bat, there is probably a way with `torch`).\n",
+    "    - Can/should we get some time on Darwin?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de890905-dc38-423c-96ac-836e2e98c48f",
+   "metadata": {},
+   "source": [
+    "## TT compression and `eps`\n",
+    "\n",
+    "Lets see how time to compute and compression changes with `eps`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "98b121ea-361e-47cd-8024-83cb69de64d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "tt_edge_flux_perp_eps2 = TT-matrix with sizes and ranks:\n",
+      "M = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
+      "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
+      "R = [1, 4, np.int64(10), np.int64(22), np.int64(46), np.int64(94), np.int64(207), np.int64(616), np.int64(1445), np.int64(2314), 900, 225, 25, 1]\n",
+      "Device: cpu, dtype: torch.float64\n",
+      "#entries 26737330 compression 0.02833189434475369\n",
+      "\n",
+      "time to tt.TT(dense_edge_flux_perp_eps2) = 139.89828610420227\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt_op_timer_eps2 = Timer()\n",
+    "\n",
+    "# form the tt operator\n",
+    "tt_op_timer_eps2.start()\n",
+    "tt_edge_flux_perp_eps2 = tt.TT(dense_edge_flux_perp, tt_op_shape, eps=1e-2)\n",
+    "tt_op_timer_eps2.stop()\n",
+    "\n",
+    "print(f'\\ntt_edge_flux_perp_eps2 = {tt_edge_flux_perp_eps2}')\n",
+    "print(f'time to tt.TT(dense_edge_flux_perp_eps2) = {tt_op_timer_eps2.get_time()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "97c985bf-94e0-4c62-aaa5-8b64612e79ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "tt_edge_flux_perp_eps1 = TT-matrix with sizes and ranks:\n",
+      "M = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
+      "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
+      "R = [1, 4, np.int64(10), np.int64(22), np.int64(46), np.int64(94), np.int64(190), np.int64(549), np.int64(1267), np.int64(1881), np.int64(880), np.int64(224), 25, 1]\n",
+      "Device: cpu, dtype: torch.float64\n",
+      "#entries 20286945 compression 0.0214968204498291\n",
+      "\n",
+      "time to tt.TT(dense_edge_flux_perp_eps1 = 138.3008828163147\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt_op_timer_eps1 = Timer()\n",
+    "\n",
+    "# form the tt operator\n",
+    "tt_op_timer_eps1.start()\n",
+    "tt_edge_flux_perp_eps1 = tt.TT(dense_edge_flux_perp, tt_op_shape, eps=1e-1)\n",
+    "tt_op_timer_eps1.stop()\n",
+    "\n",
+    "print(f'\\ntt_edge_flux_perp_eps1 = {tt_edge_flux_perp_eps1}')\n",
+    "print(f'time to tt.TT(dense_edge_flux_perp_eps1 = {tt_op_timer_eps1.get_time()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cbc1434b-67d5-4275-8dac-941b7b2d060a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "tt_edge_flux_perp_eps0 = TT-matrix with sizes and ranks:\n",
+      "M = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
+      "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
+      "R = [1, np.int64(2), np.int64(4), np.int64(8), np.int64(15), np.int64(32), np.int64(87), np.int64(171), np.int64(271), np.int64(295), np.int64(175), np.int64(79), np.int64(17), 1]\n",
+      "Device: cpu, dtype: torch.float64\n",
+      "#entries 852668 compression 0.000903519524468316\n",
+      "\n",
+      "time to tt.TT(dense_edge_flux_perp_eps0) = 39.37025308609009\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt_op_timer_eps0 = Timer()\n",
+    "\n",
+    "# form the tt operator\n",
+    "tt_op_timer_eps0.start()\n",
+    "tt_edge_flux_perp_eps0 = tt.TT(dense_edge_flux_perp, tt_op_shape, eps=1e-0)\n",
+    "tt_op_timer_eps0.stop()\n",
+    "\n",
+    "print(f'\\ntt_edge_flux_perp_eps0 = {tt_edge_flux_perp_eps0}')\n",
+    "print(f'time to tt.TT(dense_edge_flux_perp_eps0) = {tt_op_timer_eps0.get_time()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9479c171-a34c-43d1-be5f-608951e1d4b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "tt_edge_flux_perp_1eps = TT-matrix with sizes and ranks:\n",
+      "M = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
+      "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
+      "R = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "Device: cpu, dtype: torch.float64\n",
+      "#entries 78 compression 8.265177408854167e-08\n",
+      "\n",
+      "time to tt.TT(dense_edge_flux_perp_1eps) = 15.95520281791687\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt_op_timer_1eps = Timer()\n",
+    "\n",
+    "# form the tt operator\n",
+    "tt_op_timer_1eps.start()\n",
+    "tt_edge_flux_perp_1eps = tt.TT(dense_edge_flux_perp, tt_op_shape, eps=1e1)\n",
+    "tt_op_timer_1eps.stop()\n",
+    "\n",
+    "print(f'\\ntt_edge_flux_perp_1eps = {tt_edge_flux_perp_1eps}')\n",
+    "print(f'time to tt.TT(dense_edge_flux_perp_1eps) = {tt_op_timer_1eps.get_time()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "54bd9a6d-abb1-41ae-b1d7-b166da56f360",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tt_mult_result_eps (before round) = TT with sizes and ranks:\n",
+      "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
+      "R = [1, 2, 4, 8, 16, 32, 64, 128, 120, 60, 30, 15, 5, 1]\n",
+      "\n",
+      "Device: cpu, dtype: torch.float64\n",
+      "#entries 71714 compression 2.3344401041666667\n",
+      "\n",
+      "time to @ = 0.06917190551757812\n",
+      "\n",
+      "tt_mult_result_eps (after round) = TT with sizes and ranks:\n",
+      "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
+      "R = [1, 2, 4, 8, 15, 30, 60, 120, 120, 60, 30, 15, 5, 1]\n",
+      "\n",
+      "Device: cpu, dtype: torch.float64\n",
+      "#entries 67174 compression 2.186653645833333\n",
+      "\n",
+      "time to round = 0.014862060546875\n",
+      "\n",
+      "total time = 0.033796072006225586\n",
+      "tt_err = 2772.7722959686057\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt_mult_timer_eps = Timer()\n",
+    "tt_round_timer_eps = Timer()\n",
+    "\n",
+    "tt_mult_timer_eps.start()\n",
+    "tt_mult_result_eps = tt_edge_flux_perp_eps0 @ tt_uu_edge\n",
+    "tt_mult_timer_eps.stop()\n",
+    "\n",
+    "print(f'tt_mult_result_eps (before round) = {tt_mult_result}')\n",
+    "print(f'time to @ = {tt_mult_timer.get_time()}')\n",
+    "\n",
+    "\n",
+    "tt_round_timer_eps.start()\n",
+    "tt_mult_result_eps = tt_mult_result_eps.round()\n",
+    "tt_round_timer_eps.stop()\n",
+    "\n",
+    "print(f'\\ntt_mult_result_eps (after round) = {tt_mult_result_eps}')\n",
+    "print(f'time to round = {tt_round_timer_eps.get_time()}')\n",
+    "\n",
+    "print(f'\\ntotal time = {tt_mult_timer_eps.get_time() + tt_round_timer_eps.get_time()}')\n",
+    "\n",
+    "tt_err_eps = np.sum( np.square(full_mult_result - tt_mult_result_eps.full().flatten().numpy()) )\n",
+    "print(f'tt_err = {tt_err_eps}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b480a43d-930e-463f-8ecf-ad78923c7d79",
+   "metadata": {},
+   "source": [
+    "### Notes\n",
+    "\n",
+    "Summarizing the results from above.\n",
+    "- As `eps` increases toward 1, the compression and compute time is mostly stagnate until around `1e-2` at which point it starts rapidly improving, but the error and time to multiply is unacceptable.\n",
+    "- At `eps=10`, we reach the best case on compression, getting that the rank is `R = [1, 1, ..., 1]`. "
+   ]
   }
  ],
  "metadata": {
