add tests for other matvec methods

--- a/tt_prime_factors.ipynb
+++ b/tt_prime_factors.ipynb
@@ -287,7 +287,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 30 compression 0.0009765625\n",
       "\n",
-      "time to tt.TT(uu_edge) = 0.0018532276153564453\n",
+      "time to tt.TT(uu_edge) = 0.005282878875732422\n",
       "\n",
       "tt_edge_flux_perp = TT-matrix with sizes and ranks:\n",
       "M = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
@@ -296,7 +296,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 29475394 compression 0.031233251359727647\n",
       "\n",
-      "time to tt.TT(dense_edge_flux_perp) = 139.2604329586029\n"
+      "time to tt.TT(dense_edge_flux_perp) = 138.965656042099\n"
      ]
     }
    ],
@@ -370,7 +370,11 @@
     "Let's look at multiplication speeds.\n",
     "First, at our TT multiply.\n",
     "Since linear algebra operations on TTs cause the rank of the result to increase, we generally round after each `@` (note the awful compression before rounding).\n",
-    "We will time these two perations seperately, but understand that the total time is what is important."
+    "We will time these two perations seperately, but understand that the total time is what is important.\n",
+    "\n",
+    "We also test two other methods of calculating (approximations to) this matvec product. \n",
+    "`tt.TT.fast_matvec()` uses Density Matrix Renormalization Group (DMRG) iterations, and `tt._amen.amen_mv()` uses a Alternating Minimal Energy (AMEn) method.\n",
+    "We could be using these wrong, but they are much slower than the default `__matmul__` which is invoked by `@` (which is a `torch.einsum()` underneath)."
    ]
   },
   {
@@ -390,7 +394,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 14729072 compression 479.46197916666665\n",
       "\n",
-      "time to @ = 0.01729297637939453\n",
+      "time to @ = 0.019147872924804688\n",
       "\n",
       "tt_mult_result (after round) = TT with sizes and ranks:\n",
       "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
@@ -399,9 +403,9 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 71714 compression 2.3344401041666667\n",
       "\n",
-      "time to round = 0.1298661231994629\n",
+      "time to round = 0.13370203971862793\n",
       "\n",
-      "total time = 0.29431819915771484\n"
+      "total time = 0.30569982528686523\n"
      ]
     }
    ],
@@ -438,6 +442,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "3ebeaf77-069f-4bab-b8f0-e8d715f66195",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tt_mult_dmrg_result = TT with sizes and ranks:\n",
+      "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
+      "R = [1, 2, 4, 8, 16, 32, 64, 128, 124, 64, 34, 19, 9, 1]\n",
+      "\n",
+      "Device: cpu, dtype: torch.float64\n",
+      "#entries 75662 compression 2.4629557291666666\n",
+      "\n",
+      "time to fast_matvec() = 0.7787299156188965\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt_mult_dmrg_timer = Timer()\n",
+    "\n",
+    "tt_mult_dmrg_timer.start()\n",
+    "tt_mult_dmrg_result = tt.TT.fast_matvec(tt_edge_flux_perp, tt_uu_edge)\n",
+    "tt_mult_dmrg_timer.stop()\n",
+    "\n",
+    "print(f'tt_mult_dmrg_result = {tt_mult_dmrg_result}')\n",
+    "print(f'time to fast_matvec() = {tt_mult_dmrg_timer.get_time()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4dd97cea-95bf-4d24-96df-b30950708694",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tt_mult_amen_result = TT with sizes and ranks:\n",
+      "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
+      "R = [1, 2, 4, 8, 16, 32, 64, 89, 89, 64, 34, 19, 9, 1]\n",
+      "\n",
+      "Device: cpu, dtype: torch.float64\n",
+      "#entries 50288 compression 1.6369791666666667\n",
+      "\n",
+      "time to amen_mv() = 6.684347152709961\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt_mult_amen_timer = Timer()\n",
+    "\n",
+    "tt_mult_amen_timer.start()\n",
+    "tt_mult_amen_result = tt._amen.amen_mv(tt_edge_flux_perp, tt_uu_edge)\n",
+    "tt_mult_amen_timer.stop()\n",
+    "\n",
+    "print(f'tt_mult_amen_result = {tt_mult_amen_result}')\n",
+    "print(f'time to amen_mv() = {tt_mult_amen_timer.get_time()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "d688eebf-bb57-4e5d-8db0-8e8c4293e6de",
    "metadata": {},
@@ -446,8 +514,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "csr mult time = 0.0008661746978759766\n",
-      "tt mult time / csr mult time = 254.84310487200662\n"
+      "csr mult time = 0.0008530616760253906\n",
+      "tt mult time / csr mult time = 268.76704863051987\n"
      ]
     }
    ],
@@ -487,7 +555,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "full mult time = 0.4646952152252197\n"
+      "full mult time = 0.48090600967407227\n"
      ]
     }
    ],
@@ -581,7 +649,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 26737330 compression 0.02833189434475369\n",
       "\n",
-      "time to tt.TT(dense_edge_flux_perp_eps2) = 139.89828610420227\n"
+      "time to tt.TT(dense_edge_flux_perp_eps2) = 139.79760789871216\n"
      ]
     }
    ],
@@ -615,7 +683,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 20286945 compression 0.0214968204498291\n",
       "\n",
-      "time to tt.TT(dense_edge_flux_perp_eps1 = 138.3008828163147\n"
+      "time to tt.TT(dense_edge_flux_perp_eps1 = 137.17005801200867\n"
      ]
     }
    ],
@@ -649,7 +717,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 852668 compression 0.000903519524468316\n",
       "\n",
-      "time to tt.TT(dense_edge_flux_perp_eps0) = 39.37025308609009\n"
+      "time to tt.TT(dense_edge_flux_perp_eps0) = 38.91424918174744\n"
      ]
     }
    ],
@@ -667,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "9479c171-a34c-43d1-be5f-608951e1d4b4",
    "metadata": {},
    "outputs": [
@@ -683,7 +751,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 78 compression 8.265177408854167e-08\n",
       "\n",
-      "time to tt.TT(dense_edge_flux_perp_1eps) = 15.95520281791687\n"
+      "time to tt.TT(dense_edge_flux_perp_1eps) = 15.328069925308228\n"
      ]
     }
    ],
@@ -716,7 +784,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 71714 compression 2.3344401041666667\n",
       "\n",
-      "time to @ = 0.06917190551757812\n",
+      "time to @ = 0.07659149169921875\n",
       "\n",
       "tt_mult_result_eps (after round) = TT with sizes and ranks:\n",
       "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
@@ -725,9 +793,9 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 67174 compression 2.186653645833333\n",
       "\n",
-      "time to round = 0.014862060546875\n",
+      "time to round = 0.015125036239624023\n",
       "\n",
-      "total time = 0.033796072006225586\n",
+      "total time = 0.034178972244262695\n",
       "tt_err = 2772.7722959686057\n"
      ]
     }
