Add a cell looking at the density of our TT operator

--- a/tt_prime_factors.ipynb
+++ b/tt_prime_factors.ipynb
@@ -287,7 +287,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 30 compression 0.0009765625\n",
       "\n",
-      "time to tt.TT(uu_edge) = 0.005282878875732422\n",
+      "time to tt.TT(uu_edge) = 0.0016918182373046875\n",
       "\n",
       "tt_edge_flux_perp = TT-matrix with sizes and ranks:\n",
       "M = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
@@ -296,7 +296,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 29475394 compression 0.031233251359727647\n",
       "\n",
-      "time to tt.TT(dense_edge_flux_perp) = 138.965656042099\n"
+      "time to tt.TT(dense_edge_flux_perp) = 142.43342781066895\n"
      ]
     }
    ],
@@ -361,12 +361,66 @@
   },
   {
    "cell_type": "markdown",
-   "id": "658c0267-6970-40bc-b15f-e61e3a4dc73f",
+   "id": "f7ac6c5a-5267-4bd3-b806-9ffa339d2531",
    "metadata": {},
    "source": [
     "CSR gives us a compression rate of 1e-4.\n",
     "Two orders of magnitude better than TT.\n",
     "\n",
+    "Looking toward the possibility of representing the cores of `tt_edge_flux_perp` as sparse matrices, we should look the density of each core, i.e. the number of nonzero entries divided by the total number of entries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "90bfb92a-e8ba-4860-a1f7-a1a796d95a12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "density of core 0 = 0.375\n",
+      "density of core 1 = 0.6000000238418579\n",
+      "density of core 2 = 0.9670454263687134\n",
+      "density of core 3 = 0.9903656244277954\n",
+      "density of core 4 = 1.0\n",
+      "density of core 5 = 1.0\n",
+      "density of core 6 = 1.0\n",
+      "density of core 7 = 1.0\n",
+      "density of core 8 = 1.0\n",
+      "density of core 9 = 1.0\n",
+      "density of core 10 = 1.0\n",
+      "density of core 11 = 1.0\n",
+      "density of core 12 = 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, core in enumerate(tt_edge_flux_perp.cores):\n",
+    "    nnz = tn.count_nonzero(core)\n",
+    "    tot = np.prod(core.shape)\n",
+    "\n",
+    "    print(f'density of core {i} = {nnz / tot}')\n",
+    "# END for"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3782372a-a130-4616-8bd0-89aae2e997c1",
+   "metadata": {},
+   "source": [
+    "These cores are **not** sparse.\n",
+    "The original operator from which they arise is very sparse.\n",
+    "So we can't represent the cores of a TT from a sparse matrix as sparse.\n",
+    "This means that, at least sometimes (if not maybe most of the time), the TT of a sparse matrix requires more memory to store than an appropriately formatted sparse matrix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "658c0267-6970-40bc-b15f-e61e3a4dc73f",
+   "metadata": {},
+   "source": [
     "Let's look at multiplication speeds.\n",
     "First, at our TT multiply.\n",
     "Since linear algebra operations on TTs cause the rank of the result to increase, we generally round after each `@` (note the awful compression before rounding).\n",
@@ -379,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "350e25a4-28df-4a97-a601-f2b7ea23d8d0",
    "metadata": {},
    "outputs": [
@@ -394,7 +448,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 14729072 compression 479.46197916666665\n",
       "\n",
-      "time to @ = 0.019147872924804688\n",
+      "time to @ = 0.016698837280273438\n",
       "\n",
       "tt_mult_result (after round) = TT with sizes and ranks:\n",
       "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
@@ -403,9 +457,9 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 71714 compression 2.3344401041666667\n",
       "\n",
-      "time to round = 0.13370203971862793\n",
+      "time to round = 0.12585902214050293\n",
       "\n",
-      "total time = 0.30569982528686523\n"
+      "total time = 0.28511571884155273\n"
      ]
     }
    ],
@@ -442,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "3ebeaf77-069f-4bab-b8f0-e8d715f66195",
    "metadata": {},
    "outputs": [
@@ -457,7 +511,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 75662 compression 2.4629557291666666\n",
       "\n",
-      "time to fast_matvec() = 0.7787299156188965\n"
+      "time to fast_matvec() = 0.7533509731292725\n"
      ]
     }
    ],
@@ -474,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "4dd97cea-95bf-4d24-96df-b30950708694",
    "metadata": {},
    "outputs": [
@@ -489,7 +543,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 50288 compression 1.6369791666666667\n",
       "\n",
-      "time to amen_mv() = 6.684347152709961\n"
+      "time to amen_mv() = 6.566960096359253\n"
      ]
     }
    ],
@@ -506,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "d688eebf-bb57-4e5d-8db0-8e8c4293e6de",
    "metadata": {},
    "outputs": [
@@ -514,8 +568,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "csr mult time = 0.0008530616760253906\n",
-      "tt mult time / csr mult time = 268.76704863051987\n"
+      "csr mult time = 0.0007238388061523438\n",
+      "tt mult time / csr mult time = 295.42045454545456\n"
      ]
     }
    ],
@@ -547,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "01d82e9d-de95-4f86-8b6d-0d571de6af1d",
    "metadata": {},
    "outputs": [
@@ -555,7 +609,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "full mult time = 0.48090600967407227\n"
+      "full mult time = 0.5088939666748047\n"
      ]
     }
    ],
@@ -582,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "cf304c1f-639f-479d-855c-c1372521c088",
    "metadata": {},
    "outputs": [
@@ -633,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "98b121ea-361e-47cd-8024-83cb69de64d6",
    "metadata": {},
    "outputs": [
@@ -649,7 +703,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 26737330 compression 0.02833189434475369\n",
       "\n",
-      "time to tt.TT(dense_edge_flux_perp_eps2) = 139.79760789871216\n"
+      "time to tt.TT(dense_edge_flux_perp_eps2) = 148.0722939968109\n"
      ]
     }
    ],
@@ -667,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "97c985bf-94e0-4c62-aaa5-8b64612e79ec",
    "metadata": {},
    "outputs": [
@@ -683,7 +737,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 20286945 compression 0.0214968204498291\n",
       "\n",
-      "time to tt.TT(dense_edge_flux_perp_eps1 = 137.17005801200867\n"
+      "time to tt.TT(dense_edge_flux_perp_eps1 = 142.90259408950806\n"
      ]
     }
    ],
@@ -701,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "cbc1434b-67d5-4275-8dac-941b7b2d060a",
    "metadata": {},
    "outputs": [
@@ -717,7 +771,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 852668 compression 0.000903519524468316\n",
       "\n",
-      "time to tt.TT(dense_edge_flux_perp_eps0) = 38.91424918174744\n"
+      "time to tt.TT(dense_edge_flux_perp_eps0) = 40.85001492500305\n"
      ]
     }
    ],
@@ -735,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "9479c171-a34c-43d1-be5f-608951e1d4b4",
    "metadata": {},
    "outputs": [
@@ -751,7 +805,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 78 compression 8.265177408854167e-08\n",
       "\n",
-      "time to tt.TT(dense_edge_flux_perp_1eps) = 15.328069925308228\n"
+      "time to tt.TT(dense_edge_flux_perp_1eps) = 16.25500988960266\n"
      ]
     }
    ],
@@ -769,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "54bd9a6d-abb1-41ae-b1d7-b166da56f360",
    "metadata": {},
    "outputs": [
@@ -784,7 +838,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 71714 compression 2.3344401041666667\n",
       "\n",
-      "time to @ = 0.07659149169921875\n",
+      "time to @ = 0.06679534912109375\n",
       "\n",
       "tt_mult_result_eps (after round) = TT with sizes and ranks:\n",
       "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 5]\n",
@@ -793,9 +847,9 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 67174 compression 2.186653645833333\n",
       "\n",
-      "time to round = 0.015125036239624023\n",
+      "time to round = 0.015058040618896484\n",
       "\n",
-      "total time = 0.034178972244262695\n",
+      "total time = 0.03361988067626953\n",
       "tt_err = 2772.7722959686057\n"
      ]
     }
