Add STT matvec test

--- a/qtt_padding.ipynb
+++ b/qtt_padding.ipynb
@@ -310,7 +310,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 46 compression 0.00140380859375\n",
       "\n",
-      "time to tt.TT(uu_edge_pad) = 0.0019829273223876953\n",
+      "time to tt.TT(uu_edge_pad) = 0.0018210411071777344\n",
       "\n",
       "qtt_edge_flux_perp = TT-matrix with sizes and ranks:\n",
       "M = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
@@ -319,7 +319,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 34708472 compression 0.03232478350400925\n",
       "\n",
-      "time to tt.TT(dense_edge_flux_perp_pad) = 168.66281604766846\n"
+      "time to tt.TT(dense_edge_flux_perp_pad) = 164.0189368724823\n"
      ]
     }
    ],
@@ -378,7 +378,7 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 17357696 compression 529.71484375\n",
       "\n",
-      "time to @ = 0.021019935607910156\n",
+      "time to @ = 0.020586013793945312\n",
       "\n",
       "tt_mult_result (after round) = TT with sizes and ranks:\n",
       "N = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
@@ -387,9 +387,9 @@
       "Device: cpu, dtype: torch.float64\n",
       "#entries 71788 compression 2.1907958984375\n",
       "\n",
-      "time to round = 0.15227913856506348\n",
+      "time to round = 0.15366911888122559\n",
       "\n",
-      "total time = 0.34659814834594727\n"
+      "total time = 0.3485102653503418\n"
      ]
     }
    ],
@@ -434,8 +434,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "csr mult time = 0.0009050369262695312\n",
-      "qtt mult time / csr mult time = 287.2243150684931\n"
+      "csr mult time = 0.0009119510650634766\n",
+      "qtt mult time / csr mult time = 286.6192156862745\n"
      ]
     }
    ],
@@ -462,6 +462,69 @@
     "\n",
     "In summary, it does not seem that QTT is helping us versus \"standard\" TT."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2d6c7b33-67cf-44dc-bf81-62e523f273ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.21793531, -0.21793362, ...,  0.        ,\n",
+       "        0.        ,  0.        ])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shape = [2] * (L * 2)\n",
+    "edge_flux_perp_pad_tens = dense_edge_flux_perp_pad.reshape(shape)\n",
+    "\n",
+    "permute = tuple( np.arange(2 * L).reshape([2, 15]).transpose().flatten() )\n",
+    "edge_flux_perp_pad_tens = tn.permute(tn.from_numpy(edge_flux_perp_pad_tens), permute)\n",
+    "\n",
+    "edge_flux_perp_pad_tens = edge_flux_perp_pad_tens.reshape([4] * L)\n",
+    "\n",
+    "flat = edge_flux_perp_pad_tens.flatten().numpy()\n",
+    "flat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "21501fe5-c867-444b-9b32-b7a7ae50859f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "opened file\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('dense_edge_flux_perp.tsv', 'w') as f:\n",
+    "    print('opened file')\n",
+    "    for i, x in enumerate(flat):\n",
+    "        if x != 0:\n",
+    "            f.write(f'{i}\\t{x:f}\\n')\n",
+    "    # END for\n",
+    "# END with"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a11b2e64-0af9-4a99-9eb1-513ba00a40bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -480,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
